syntax = "proto3";

import "gorm_db.proto";

package task.service.v1;
option go_package = "./pb";

import "mwitkow/go-proto-validators/validator.proto";

message LoginRequest {
    string username = 1 [(validator.field) = {msg_exists : true}];
    string password = 2 [(validator.field) = {msg_exists : true}];
}

message LoginResponse {
    string access_token = 1;
}

message HealthCheckResponse {
    string message = 1;
}

message Empty {}

message InvalidKeyError {
    string key = 1;
    string message = 2;
}